--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,6 @@ jobs:
     name: hosting application
     runs-on: [self-hosted, linux, x64]
     steps:
+
+    - name: Checkout Repo
+      uses: actions/checkout@v1
