--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,8 @@ jobs:
 
     - name: Checkout Repo
       uses: actions/checkout@v1
+      
+    - name: testing 
+      run: |
+        terraform -version
+        ansible -version
