--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,6 @@ jobs:
       uses: actions/checkout@v1
       
     - name: testing 
-      run: |
-        terraform -version
-        ansible -version
+      run: pwd
+      
+
