--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,8 @@ jobs:
       uses: actions/checkout@v1
       
     - name: testing 
-      run: ls -lthra 
+      run: |
+        cd terraform
+        ls -lthra 
       
 
