--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,16 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  workflow_call:
+    inputs:
+      action:
+        description: 'terraform action: apply or destroy'
+        default: 'plan'
+        required: false
+        type: string
+
+
+
 
 jobs:
   build:
@@ -22,7 +32,7 @@ jobs:
         terraform init
         terraform validate
         
-    - name: Terraform apply
+    - name: Terraform ${{ inputs.action }}
       run: |
         cd terraform
-        terraform apply --auto-approve
+        terraform ${{ inputs.action }} --auto-approve
