--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
     - name: Terraform ${{ inputs.action }}
       run: |
         cd terraform
+        terraform apply --auto-approve
         terraform destroy --auto-approve
