--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
        mkdir /opt/custom_workspace/project_mediawiki/terraform || true
        cp -rf key /opt/custom_workspace/project_mediawiki/
        cp -rf ansible_playbook /opt/custom_workspace/project_mediawiki/
-       cp terraform/*.tf /opt/custom_workspace/project_mediawiki/terraform
+       cp -f terraform/*.tf /opt/custom_workspace/project_mediawiki/terraform
        ls -lthra /opt/custom_workspace/project_mediawiki/*
       
     - name: Terraform validate
