--- a/.github/workflows/cicd_package.yml
+++ b/.github/workflows/cicd_package.yml
@@ -27,6 +27,6 @@ jobs:
     - name: Deploy the code
       run: |
        ls -ltra 
-  #     cd cicd_ansible
-  #     ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
+       cd cicd_ansible
+       ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
       
