--- a/.github/workflows/cicd_package.yml
+++ b/.github/workflows/cicd_package.yml
@@ -26,7 +26,6 @@ jobs:
       
     - name: Deploy the code
       run: |
-       ls -ltra 
        cd cicd_ansible
-       ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
+       ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd_package.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
       
