--- a/.github/workflows/cicd_package.yml
+++ b/.github/workflows/cicd_package.yml
@@ -27,5 +27,6 @@ jobs:
     - name: Deploy the code
       run: |
        cd cicd_ansible
+       chmod 400 ubuntu_key.pem
        ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd_package.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
       
