--- a/.github/workflows/cicd_package.yml
+++ b/.github/workflows/cicd_package.yml
@@ -29,6 +29,6 @@ jobs:
        cd cicd_ansible
        chmod 400 ubuntu_key.pem
        ls -ltra
-       echo ${{ inputs.terraform_action }}
-       ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd_package.yml --extra-vars "version=${{ inputs.terraform_action }}" -vv
+       echo ${{ inputs.url }}
+       ansible-playbook -u ec2-user --private-key ubuntu_key.pem -i inv cicd_package.yml --extra-vars "version=${{ inputs.url }}" -vv
       
